<resources>
    <string name="app_name">EcoGamify</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_heading">Find Amazing events happening around you.</string>
    <string name="dashboard_sub_title">480 events around you</string>
    <string name="search_bar_hint">search for event...</string>
    <string name="dummy_text">Native species, community engagement: More to planting trees than digging and watering</string>
    <string name="name">Lim Siew Mooi</string>
    <string name="user_Name">Name\n</string>
    <string name="enter_name">Name\n</string>
    <string name="gender_View">Gender\n</string>
    <string name="hintname" />
    <string name="Basic_info">Basic Info</string>
    <string name="contact_info">Contact Info\n</string>
    <string name="email">Email</string>
    <string name="phone">Phone\n</string>
    <string name="started_title">Hello You!</string>
    <string name="started_sub_title">
        Nice to meet you, come to enjoy your ecolife with us!
        <br><b>Login</b> if you already have an account.</br>
        <br><b>Register</b> to get started with the app.</br>
    </string>
    <string name="secure_safe_img">Secure Safe</string>
    <string name="illustration_im" />
    <string name="btn_register">REGISTER</string>
    <string name="illustration_img">Illustration Image</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login to app</string>
    <string name="login_sub_title">
        <font color="#00C9B8"><b>Login</b></font>
        if you already have an account.
    </string>
    <string name="login_email">Your email</string>
    <string name="login_password">Your password</string>
    <string name="login_forget_pw">Forgot Password</string>
    <string name="login_havent_account">
        I don\'t haven an account
        <font color="#00C9B8"><b>Register</b></font>
    </string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title">
        <font color="#00C9B8"><b>Register</b></font>
        to get start with the app.
    </string>
    <string name="register_fullname">Your fullname</string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="register_your_password">Input your password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="already_and_login">
        I already have an account
        <font color="#00C9B8"><b>Login</b></font>
    </string>
    <string name="btn_logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beach_category">Cleaning Up The Environment</string>
    <string name="plant_native_category">Plant Native Species</string>
    <string name="recycle_category">Reduce, Reuse, Replace and Recycle</string>
    <string name="address_Info">Address Info</string>
    <string name="home_address">Address</string>
    <string name="work_address">Work\n</string>
    <string name="password">Password\n</string>
    <string name="password_info">Password\n</string>
    <string name="empty" />
    <string name="plant_badge">Plant\n</string>
    <string name="ocean_cleaning">Ocean Clean Up</string>
    <string name="score">../6</string>
    <string name="scorebar">Score</string>
    <string name="plantsroce">../6</string>
    <string name="recyclebadge">Recycle</string>
    <string name="recycle_sroce">../6\n</string>
    <string name="event01_description">
        <b>Native species, community engagement: More to planting trees than digging and watering</b>
    </string>
    <string name="event02_description">
        <b>100 Million Tree Planting Campaign: Know the trees, areas before planting FRIM</b>
    </string>
    <string name="event03_description">
        <b>1 Student 10 Trees Campaign launched in UTAR Kampar</b>
    </string>
    <string name="event04_description">
        <b>Plant A Tree: Goes towards the restoration of the forest corridor along the Lower Kinabatangan</b>
    </string>
    <string name="event01_description_more"><![CDATA[Ms Nutan Shah sent soil flying as her cangkul came down in swift, sure strokes on the forest floor. In the hole she dug, she carefully placed a sapling, then re-filled the gaps with earth.The final steps were to water the plant and leave a ring of dried leaves around it to act as fertiliser. It\'s hard work, but she has already planted about a dozen trees around Singapore and still can\'t get enough of this.-->\n]]></string>
    <string name="garbage1_amount_view">0</string>
    <string name="garbage2_amount_view">0</string>
    <string name="garbage3_amount_view">0</string>
    <string name="garbage4_amount_view">0</string>
    <string name="garbage5_amount_view">0</string>
    <string name="garbage6_amount_view">0</string>
    <string name="garbage1_less">-</string>
    <string name="garbage2_less">-</string>
    <string name="garbage3_less">-</string>
    <string name="garbage4_less">-</string>
    <string name="garbage5_less">-</string>
    <string name="garbage6_less">-</string>
    <string name="garbage1_add">+</string>
    <string name="garbage2_add">+</string>
    <string name="garbage3_add">+</string>
    <string name="garbage4_add">+</string>
    <string name="garbage5_add">+</string>
    <string name="garbage6_add">+</string>
    <string name="ocean_item_amount_title">Number Of Item</string>
    <string name="ocean_total_item_number">0\n</string>
    <string name="submit_result">Submit</string>
    <string name="garbage1">Plastic Bag</string>
    <string name="garbage2">" Bottles\n(Plastics)"</string>
    <string name="garbage3">Beverage\ncans</string>
    <string name="garbage4">Cups,Plates\n  (foam)</string>
    <string name="garbage5">Straws\n(Plastics)</string>
    <string name="garbage6">Food Containers\n    (Foam)</string>
    <string name="take_photo">Take Photo\n</string>
    <string name="time">Time</string>
    <string name="time_vies">\"00:00:00\"</string>
    <string name="clear_button">Clear</string>
    <string name="eventname">Event Name\n</string>
    <string name="total_garbage">Total Garbage</string>
    <string name="timmmme">Time Use\n</string>
    <string name="total_garbage_amount">0</string>
    <string name="timeeeeeee">Time</string>
    <string name="event02_description_more">The Malaysian government will plant 100 million trees by 2025 through the environmental programme “Mission GreenPossible.” Launched in October 2022, the initiative aims to address the negative impacts of climate change like intense drought, typhoons, rising sea levels, and insect outbreaks. As of December 2022, the government agency has planted 41 million trees including mangroves, bamboo, mangoes, and different forest trees.</string>
    <string name="event03_description_more">The campaigned was launched with a tree planting gimmick and plaque signing by Deputy Minister of Plantation Industries and Commodities Dato’ Sri Dr Wee Jeck Seng, accompanied by CEO of MRC Nor Hizwan bin Ahmad, and UTAR President Ir Prof Dr Ewe Hong Tat. Also present were MRC Board Members Leong Cheok Keng, Dayang Rusimah @ Raynie Datuk Hj Mohd Din, MRC Senior Director of Sustainability Mohd Fauzi bin Mohd Ghazali, MRC Deputy Director of Sustainability Shahrul Izad bin Yahya, UTAR Council Member Mr Hew Fen Yee, UTAR Vice President for Student Development and Alumni Relations Prof Dr Choong Chee Keong, UTAR Dean of Faculty of Science Assoc Prof Dr Lim Tuck Meng, Founders of SEEDS Malaysia Abdul Razak bin Abdul Aziz and Intan Siti Zarinah Jailani, Operating partner of SEEDS Malaysia Rashdan Rashid, Forest Officer of Central Kinta/Manjung District Forest Office Khairul Nizam bin Mohamed, Han Culture Centre Malaysia (HAN) President Dato\' Goh Hin San, HAN Vice President Datin Lee Ngeok Lan, HAN Managing Director Mini Goh, HAN General Manager Alex Yong, senior management and administrators of MRC and UTAR respectively, and participants.</string>
    <string name="event04_description_more">In Malaysia’s Bornean state of Sabah, a small NGO is replanting forest over land that was once a legally operating oil palm plantation — essentially reversing time for a small swath of land that, when finished, will reconnect two massive protected areas. The Rhino and Forest Fund (RFF) says the burgeoning 800-meter-wide (2,600-foot) wildlife corridor will benefit numerous endangered species, including Bornean elephants, storm storks, and perhaps the world’s largest remaining population of Bornean banteng (Bos javanicus lowi), a type of wild cattle.</string>
    <string name="beach01_description">Beach Clean-Up Campaign - Batu Ferringhi, Penang</string>
    <string name="beach02_description">Free Our Seas And Beyond Environmental Art Festival</string>
    <string name="beach01_description_more">Batu Ferringhi, Penang, 2nd June 2022 – Prior to the success of Beach Clean-Up in Kuantan last March 2022, Lush Malaysia expanded its efforts and collaborated with Shangri-La Rasa Sayang and Shangri-La Golden Sands, Penang for another Beach Clean-Up Campaign over the coast of Batu Ferringhi, Pulau Pinang. This campaign aimed to help clean the coast and also bring people face-to-face with the reality of plastic pollution. We had over 75 volunteers and influencers (Koe Yeet, Esther Zhen, Jayce Tay, Fiza Saad and Phyllis, Buro Malaysia) who joined us hand in hand for this campaign. Among the volunteers that came down with us for this effort were students from MSU College, Penang. Without them, this campaign would not be successful and we sincerely thank everyone who came.</string>
    <string name="beach02_description_more">People with a concern for the environment and a saving ocean life got together at the Free Our Seas and Beyond, Environmental Art Festival around the Carpenter House on Hollywood Beach. It began with a beach clean up activity as people worked to clean trash from the beach. This was followed by an art festival which included a large number of art and craft vendors and groups involved with preserving the environment. People could see art that had been created from trash collected at the beach. They could also enjoy lunch from food trucks. There was live musical entertainment. Manon Wiese, executive director of Free Our Seas was pleased with the event. “This is a celebration of Earth Day. We brought the community together. We are bringing an awareness of the problem of plastic pollution in the ocean. We are using art to create environmental awareness,” she said.</string>
    <string name="recycle01_description">Environment Protection : Taiwan Buddhist Tzu-Chi Foundation Malaysia</string>
    <string name="reecycle02_description">Alam Flora \'Waste is Amazing\' runaway turns recyclable items into fashion</string>
    <string name="recycle01_details_more">Tzu Chi started its environmental protection initiatives in Malaysia in 1995. To-date, 160 recycling centres and over 980 recycling points have been set up across Malaysia, in hope to make environmental protection a way of life.</string>
    <string name="ins_content">Share to Ins</string>
    <string name="facebook_content">Share to FaceBook\n</string>
    <string name="whatsApp_content">Share to WhatApp\n</string>
    <string name="gmail_content">Share to Gmail\n</string>
    <string name="done_button">Done\n</string>
    <string name="edit_profiles">Edit Profiles\n</string>
    <string name="enter_password">Password\n</string>
    <string name="enter_email">Email\n</string>
    <string name="enter_contact">Contact Number</string>
    <string name="enter_birth">Day of Birth</string>
    <string name="btnSave"><![CDATA[Save&Change]]></string>
    <string name="btndelete">Delete\n</string>
    <string name="back_profiles">BacktoProfiles\n</string>
</resources>